// Run `pb-rs holostats-live-chat/continuation/continuation.proto` to generate rust code

// youtube use protobuf to encode continuation,
// there're no way for me to knowing each fields mean,
// so i simply name them with A, B, C ¯\_(ツ)_/¯

// continuation: 0ofMyANhGlhDaWtxSndvWVZVTnhiVE5DVVV4c1NtWjJhMVJ6V0Y5b2RtMHdWVzFCRWd0eFRtVkthRXBXUkU5VE9Cb1Q2cWpkdVFFTkNndHhUbVZLYUVwV1JFOVRPQ0FCMAGCAQIIAQ==
// 119693434 {                       <- B
//     3: "CikqJwo..."
//     6: 1
//     16 {                          <- A
//       1: 1
//     }
//   }

// video: CikqJwoYVUNxbTNCUUxsSmZ2a1RzWF9odm0wVW1BEgtxTmVKaEpWRE9TOBoT6qjduQENCgtxTmVKaEpWRE9TOCAB
// 1 {                               <- D
//   5 {                             <- C
//     1: "UCqm3BQLlJfvkTsX_hvm0UmA"
//     2: "qNeJhJVDOS8"
//   }
// }
// 3 {                               <- F
//   48687757 {                      <- E
//     1: "qNeJhJVDOS8"
//   }
// }
// 4: 1

syntax = "proto2";

package continuation;

message A {
    required int32 f1 = 1;
}

message B {
    required string video = 3;
    required int32 f6 = 6;
    required A a = 16;
}

message Continuation {
    required B b = 119693434;
}

message C {
    required string channel_id = 1;
    required string video_id = 2;
}

message D {
    required C c = 5;
}

message E {
    required string video_id = 1;
}

message F {
    required E e = 48687757;
}

message Video {
    required D d = 1;
    required F f = 3;
    required int64 s4 = 4;
}